Change Log for Kicad
Started 2007-June-11

Please add newer entries at the top, list the date and your name with 
email address.

2007-Oct-9 UPDATE   Dick Hollenbeck <dick@softplc.com>
================================================================================
+ pcbnew
    changed pcbnew/onrightclick.cpp so that a right click only shows the
    Selection Clarification menu if there is no selected object or if the
    click is in a position different from where the selection was previously
    made.

    
2007-Oct-09 UPDATE   Jean-Pierre Charras <jean-pierre.charras@inpg.fr>
================================================================================
+ eeschema:
	cross-probing minor bug solved ( due to last modification): pins/pads not probed


2007-Oct-08 UPDATE   Geoff Harland <gharlandau@yahoo.com.au>
================================================================================
+ gerbview
    Display on screen now updates properly (in Linux version) after clicking on
    the "OK" button provided within the "GerbView Layer Colors" dialog box.


2007-Oct-7 UPDATE   Jean-Pierre Charras <jean-pierre.charras@inpg.fr>
================================================================================
+ eeschema
	create new file cross-probing.cpp
	move RemoteCommand() to cross-probing.cpp and create SendMessageToPCBNEW()

+ pcbnew
	bug in move pad fixed (could crash pcbnew)
	Small change in selection clarification (side effect removed):
	- Escape or click on title does not show the next popup menu.
	- the title is displayed under linux
	- definition CUIVRE_N translated into COPPER_LAYER_N


2007-Oct-07 UPDATE   Geoff Harland <gharlandau@yahoo.com.au>
================================================================================
+ all
  * Various dialog boxes can now (otherwise) be cancelled by pressing the "Esc" key.
    (Some dialog boxes still require attention in that regard though, so that task