@@ -211,8 +211,8 @@ public:
     /** 
      * A scan list for all primary board items, omitting items which are subordinate to
      * a MODULE, such as D_PAD and TEXTEMODULE.
-     */
     static const KICAD_T PrimaryItems[];
+     */
 
 
     /**
